<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">User</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_username">输入账号</string>
    <string name="hint_password">输入密码</string>
    <string name="hint_new_user">新用户</string>
    <string name="hint_confirm_password">确认密码</string>

    <string name="message_center">消息中心</string>
    <string name="share_articles">分享文章</string>
    <string name="collect_articles">收藏文章</string>
    <string name="tool_list">工具列表</string>
    <string name="theme_setting">主题设置</string>

</resources>