<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="dynamicThemeViewModel"
            type="com.pp.theme.AppDynamicTheme" />

        <variable
            name="viewModel"
            type="com.pp.user.model.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/StyleTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/hint_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.username}"
                android:textColor="@{dynamicThemeViewModel.textColor}"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/StyleTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/hint_password"
            app:layout_constraintBottom_toTopOf="@id/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.confirmPassword}"
                android:textColor="@{dynamicThemeViewModel.textColor}"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            style="@style/StyleTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/hint_confirm_password"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorEnabled="@{!TextUtils.isEmpty(viewModel.errorMessage)}"
            app:errorMessage="@{viewModel.errorMessage}"
            app:errorTextColor="@android:color/holo_red_dark"
            app:helperText="@{viewModel.helperMessage}"
            app:helperTextColor="@{viewModel.succeed ? @android:color/holo_green_dark:@android:color/holo_orange_light}"
            app:helperTextEnabled="@{!TextUtils.isEmpty(viewModel.helperMessage)}"
            app:layout_constraintBottom_toTopOf="@id/card_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintWidth_percent="0.8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@{dynamicThemeViewModel.textColor}"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_register"
            enable="@{viewModel.registerEnable}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:onClick="@{viewModel::onClick}"
            app:cardBackgroundColor="@{viewModel.registerEnable ? dynamicThemeViewModel.colorControlActivated : dynamicThemeViewModel.colorButtonNormal}"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password"
            app:layout_constraintWidth_percent="0.8"
            tools:cardBackgroundColor="?android:colorButtonNormal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@{dynamicThemeViewModel.textColor}"
                android:textSize="15sp"
                tools:textColor="?android:textColor" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/new_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_small"
            android:onClick="@{viewModel::onReturn}"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_return_left"
            android:tint="@{dynamicThemeViewModel.textColor}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/card_register"
            app:layout_constraintTop_toBottomOf="@id/card_register"
            app:layout_constraintWidth_percent="0.1"
            tools:ignore="UseAppTint"
            tools:tint="?android:textColor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
